--- a/roles/gitlab_setup/defaults/main.yml
+++ b/roles/gitlab_setup/defaults/main.yml
@@ -1,2 +1,9 @@
 ---
 # defaults file for gitlab_setup
+
+gitlab_project_temp_dir: /tmp/gitlab-clone
+hook_validate_certs: false
+
+gitlab_action_push: true
+gitlab_action_tag: false
+
