First develop collection (#1)
* first version casc_setup collection

* create group_vars by branches

* modify configure_connection_controller_credentials.yml

* replace scm_url

* global configure_connection_controller_credentials.yml

* recolocate remove temp directory

* fix tags

* add gitlab_default_branch

* change tag names

* fix gitlab_default_branch

* new version cd-gitlab-webhook-trigger.yml

* split task in gitlab_setup

* add variable for controler_hostanme in controller_credential groupvar

* scm_url for projects from variable

* always remove tmp directory when git push

* parameterize branches

* remove dict for branches

* omit push_events_branch_filter if not defined

* omit push_events_branch_filter if not defined

* fix template configure_connection_controller_credentials.yml

* fixes

* fix config-controller-filetree.yml

* add playbook gitlab_webhook

* fix auth tag always

* fixes

* add ansible.cfg gitignore

* fixes

* readme

--- a/roles/gitlab_setup/defaults/main.yml
+++ b/roles/gitlab_setup/defaults/main.yml
@@ -1,2 +1,10 @@
 ---
 # defaults file for gitlab_setup
+
+gitlab_project_temp_dir: /tmp/gitlab-clone
+hook_validate_certs: false
+
+gitlab_action_push: true
+gitlab_action_tag: false
+
+gitlab_project_visibility: private
