--- a/roles/gitlab_setup/tasks/main.yml
+++ b/roles/gitlab_setup/tasks/main.yml
@@ -1,2 +1,50 @@
 ---
 # tasks file for gitlab_setup
+- name: "Assert that all needed variables are defined"
+  assert:
+    that:
+      - gitlab_api_url is defined
+      - gitlab_api_token is defined
+      - gitlab_group is defined
+      - gitlab_subgroup is defined
+      - gitlab_project is defined
+      - gitlab_validate_certs is defined
+      - gitlab_api_user is defined
+      - gitlab_branches is defined
+      - gitlab_default_branch is defined
+      - gitlab_http_protocol is defined
+
+- name: GitLab Init
+  ansible.builtin.include_tasks: gitlab_init.yml
+  args:
+    apply:
+      tags: git-init
+  tags:
+    - git-init
+
+- name: GitLab Push
+  ansible.builtin.include_tasks: gitlab_push.yml
+  args:
+    apply:
+      tags: git-push
+  tags:
+    - git-push
+
+- name: Create and protect branches
+  ansible.builtin.include_tasks: create_branch.yml
+  args:
+    apply:
+      tags: git-branches
+  loop: "{{ gitlab_branches }}"
+  loop_control:
+    loop_var: __gitlab_branches_item
+  tags:
+    - git-branches
+
+- name: Setup gitlab Webhook
+  ansible.builtin.include_tasks: gitlab_webhook.yml
+  args:
+    apply:
+      tags: git-hook
+  tags:
+    - git-hook
