add info to READMEs,fix some variable names and refactor asserts

--- a/examples/gitlab_setup.yml
+++ b/examples/gitlab_setup.yml
@@ -41,7 +41,7 @@
           tags: git-push
       tags: git-push
 
-    - name: GitLab push
+    - name: GitLab create branches
       ansible.builtin.include_role:
         name: gitlab_setup
         tasks_from:  create_branch.yml
