--- a/roles/gitlab_setup/defaults/main.yml
+++ b/roles/gitlab_setup/defaults/main.yml
@@ -7,4 +7,4 @@ hook_validate_certs: false
 gitlab_action_push: true
 gitlab_action_tag: false
 
-gitlab_project_visibility: private
+gitlab_visibility: private
