--- a/roles/filetree_create/defaults/main.yml
+++ b/roles/filetree_create/defaults/main.yml
@@ -1,6 +1,10 @@
 ---
 # defaults file for filetree_create
 
+automation_hub: "<< ToDo >>"
+controller_dev: "<< ToDo >>"
+controller_pro: "<< ToDo >>"
+
 gitlab_project_temp_dir: /tmp/gitlab-clone
 dir_orgs_vars: orgs_vars
 
@@ -33,7 +37,7 @@ org_dir_structure_env:
   - { path: "controller_inventory_sources.d", mode: '0755', controller_list: controller_inventory_sources }
   - { path: "controller_settings.d", mode: '0755', controller_list: controller_settings }
 
-template_playbook_list:
+other_template_list:
   - { template: cd-gitlab-webhook-trigger.yml.j2, dest:  cd-gitlab-webhook-trigger.yml }
   - { template: config-controller-filetree.yml.j2, dest: config-controller-filetree.yml }
   - { template: drop_diff.yml.j2, dest: drop_diff.yml }
@@ -42,3 +46,4 @@ template_playbook_list:
   - { template: README.md.j2, dest: README.md }
   - { template: gitignore.j2, dest: .gitignore }
   - { template: gitlab_webhook.yml.j2, dest: gitlab_webhook.yml }
+  - { template: inventory.j2, dest: inventory }
