--- a/roles/filetree_create/tasks/main.yml
+++ b/roles/filetree_create/tasks/main.yml
@@ -86,8 +86,8 @@
 
 - name: Upload images
   ansible.builtin.copy:
-    src: "images/{{  __image_item }}"
-    dest: "{{ gitlab_project_temp_dir }}/images/{{ __image_item }}"
-  loop: "{{ lookup('ansible.builtin.fileglob', 'images/*') }}"
+    src: "{{  __image_item }}"
+    dest: "{{ gitlab_project_temp_dir }}/images/"
+  loop: "{{ lookup('ansible.builtin.fileglob', 'images/*', wantlist=True) }}"
   loop_control:
     loop_var: __image_item
