#23 allow gitlab_setup without gitlab_subgroup

--- a/roles/gitlab_setup/tasks/gitlab_webhook.yml
+++ b/roles/gitlab_setup/tasks/gitlab_webhook.yml
@@ -42,7 +42,7 @@
     api_url: "{{ gitlab_api_url }}"
     api_token: "{{ gitlab_api_token | default(omit, true) }}"
     api_password: "{{ gitlab_api_password | default(omit, true) }}"
-    project: "{{ gitlab_group }}/{{ gitlab_subgroup }}/{{ gitlab_project }}"
+    project: "{{ gitlab_group }}{{ ('/' + gitlab_subgroup) if gitlab_subgroup is defined else '' }}/{{ gitlab_project }}"
     hook_url: "{{ controller_webhook_url }}"
     state: present
     push_events: "{{ gitlab_action_push }}"
