--- a/roles/gitlab_setup/tasks/create_branch.yml
+++ b/roles/gitlab_setup/tasks/create_branch.yml
@@ -4,7 +4,6 @@
       - gitlab_api_url is defined
       - gitlab_api_token is defined
       - gitlab_group is defined
-      - gitlab_subgroup is defined
       - gitlab_project is defined
       - gitlab_validate_certs is defined
       - gitlab_branches is defined
@@ -14,7 +13,7 @@
     api_url: "{{ gitlab_api_url }}"
     validate_certs: "{{ gitlab_validate_certs }}"
     api_token: "{{  gitlab_api_token }}"
-    project: "{{ gitlab_group }}/{{ gitlab_subgroup }}/{{ gitlab_project }}"
+    project: "{{ gitlab_group }}{{ ('/' + gitlab_subgroup) if gitlab_subgroup is defined else '' }}/{{ gitlab_project }}"
     branch: "{{ __gitlab_branches_item }}"
     ref_branch: "{{ gitlab_default_branch }}"
     state: present
@@ -24,7 +23,7 @@
     api_url: "{{ gitlab_api_url }}"
     validate_certs: "{{ gitlab_validate_certs }}"
     api_token: "{{  gitlab_api_token }}"
-    project: "{{ gitlab_group }}/{{ gitlab_subgroup }}/{{ gitlab_project }}"
+    project: "{{ gitlab_group }}{{ ('/' + gitlab_subgroup) if gitlab_subgroup is defined else '' }}/{{ gitlab_project }}"
     name: "{{ __gitlab_branches_item }}"
     merge_access_levels: maintainer
     push_access_level: nobody
