--- a/roles/gitlab_setup/tasks/gitlab_init.yml
+++ b/roles/gitlab_setup/tasks/gitlab_init.yml
@@ -4,7 +4,6 @@
       - gitlab_api_url is defined
       - gitlab_api_token is defined
       - gitlab_group is defined
-      - gitlab_subgroup is defined
       - gitlab_project is defined
       - gitlab_validate_certs is defined
       - gitlab_api_user is defined
@@ -17,7 +16,7 @@
     validate_certs: "{{ gitlab_validate_certs }}"
     api_token: "{{  gitlab_api_token }}"
     name: "{{ gitlab_project }}"
-    group: "{{ gitlab_group }}/{{ gitlab_subgroup }}"
+    group: "{{ gitlab_group }}{{ ('/' + gitlab_subgroup) if gitlab_subgroup is defined else '' }}"
     initialize_with_readme: true
     default_branch:  "{{ gitlab_default_branch }}"
     visibility: "{{ gitlab_visibility }}"
