--- a/roles/gitlab_setup/tasks/gitlab_webhook.yml
+++ b/roles/gitlab_setup/tasks/gitlab_webhook.yml
@@ -41,6 +41,7 @@
   community.general.gitlab_hook:
     api_url: "{{ gitlab_api_url }}"
     api_token: "{{ gitlab_api_token | default(omit, true) }}"
+    api_username: "{{ gitlab_api_user | default(omit, true) }}"
     api_password: "{{ gitlab_api_password | default(omit, true) }}"
     project: "{{ gitlab_group }}{{ ('/' + gitlab_subgroup) if gitlab_subgroup is defined else '' }}/{{ gitlab_project }}"
     hook_url: "{{ controller_webhook_url }}"
